<resources>
    <string name="app_name">Tyr2018</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="downloaded_events">Downloaded Events</string>
    <string name="_2018_frc_events">2018 FRC Events</string>
    <string name="title_activity_main">Choose a FRC Event</string>
    <string name="text_titleConfirmDelete">Delete Event Data?</string>
    <string name="text_messageConfirmDelete">This will remove all event data from this device, including collected
        scouting data.  Are you sure you want to proceed?</string>
    <string name="text_titleAlreadyDownloaded">Event Already Downloaded</string>
    <string name="text_messageAlreadyDownloaded">This event already has existing data.  To reset all data,
        first delete this file from the downloaded list and then re-download the event.</string>
    <string name="text_titleProgress">Please wait&#8230;</string>
    <string name="text_messageProgressEventList">Accessing Event Lists&#8230;</string>
    <string name="text_messageProgressDownload">Downloading Event Data&#8230;</string>
    <string name="text_titleNoInternet">Turn on Internet Connection</string>
    <string name="text_messageNoInternet">Please turn on the internet connection to download an event.</string>
    <string name="strategy_field">Strategy Field</string>
    <string name="match_data">Match Data</string>
    <string name="pit_data">Pit Data</string>
    <string name="Blank_space" />
    <string name="TextView_autoType">Type of Auto?</string>
    <string name="TextView_switch_or_scale">Can it get cubes into the switch, scale, or both?</string>
    <string name="TextView_averageSpeed">What is the average speed of the robot?</string>
    <string name="TextView_cycleAreas">Where does the robot cycle?</string>
    <string name="TextView_climb">Can the robot climb?</string>
    <string name="TextView_floorPickup">Is it able to pick up boxes on the floor?</string>
    <string name="TextView_driveTrain">What type of drive train does the robot use?</string>
    <string name="TextView_intakeShooterType">What type of intake/lift or shooter is used?</string>
    <string name="ans">Ans</string>
    <string name="zero">0</string>
    <string name="average_cubes_in_boost_when_activated">Average cubes in boost when activated:</string>
    <string name="average_cubes_in_levitate_when_activated">Average cubes in levitate when activated:</string>
    <string name="average_cubes_in_force_when_activated">Average cubes in force when activated:</string>
    <string name="average_time_boost_is_activated">Average time boost is activated:</string>
    <string name="average_time_levitate_is_activated">Average time levitate is activated:</string>
    <string name="average_time_force_is_activated">Average time force is activated:</string>
    <string name="average_number_of_cubes_in_vault">Average number of cubes in vault:</string>
    <string name="disabled_percentage">Disabled %:</string>
    <string name="matches_with_red_card_percentage">Matches with red card %:</string>
    <string name="matches_with_yellow_card_percentage">Matches with yellow card %:</string>
    <string name="matches_with_foul_percentage">Matches with foul %:</string>
    <string name="matches_with_tech_foul_percentage">Matches with tech foul %:</string>
    <string name="human_player_at_vault_percentage">Human player at vault %:</string>
    <string name="parking_percentage">Parking %:</string>
    <string name="climb_assist_percentage">Climb Assist %:</string>
    <string name="climb_percentage">Climb %:</string>
    <string name="average_number_of_ownership_changes_for_scale_in_tele">Average number of ownership changes for scale in tele:</string>
    <string name="average_number_of_ownership_changes_for_opponent_switch_in_tele">Average number of ownership changes for opponent switch in tele:</string>
    <string name="average_number_of_ownership_changes_for_alliance_switch_in_tele">Average number of ownership changes for alliance switch in tele:</string>
    <string name="average_time_owning_scale_in_tele">Average time owning scale in tele:</string>
    <string name="average_time_it_takes_to_gain_ownership_in_scale_in_tele">Average time it takes to gain ownership in scale in tele:</string>
    <string name="average_time_owning_opponent_switch_in_tele">Average time owning opponent switch in tele:</string>
    <string name="average_time_it_takes_to_gain_ownership_in_opponent_switch_in_tele">Average time it takes to gain ownership in opponent switch in tele:</string>
    <string name="average_time_owning_alliance_switch_in_tele">Average time owning alliance switch in tele:</string>
    <string name="average_time_it_takes_to_gain_ownership_in_alliance_switch_in_tele">Average time it takes to gain ownership in alliance switch in tele:</string>
    <string name="average_tele_cubes_in_scale">Average tele Cubes in scale:</string>
    <string name="average_tele_cubes_in_opposing_switch">Average tele Cubes in opposing switch:</string>
    <string name="average_tele_cubes_in_alliance_switch">Average tele Cubes in alliance switch:</string>
    <string name="picked_up_cube_in_tele_percentage">Picked up cube in tele %:</string>
    <string name="average_tele_score">Average tele score:</string>
    <string name="average_number_of_ownership_changes_for_scale_in_auto">Average number of ownership changes for scale in auto:</string>
    <string name="average_number_of_ownership_changes_for_opponent_switch_in_auto">Average number of ownership changes for opponent switch in auto:</string>
    <string name="average_number_of_ownership_changes_for_alliance_switch_in_auto">Average number of ownership changes for alliance switch in auto:</string>
    <string name="average_time_owning_scale_in_auto">Average time owning scale in auto:</string>
    <string name="average_time_it_takes_to_gain_ownership_in_scale_in_auto">Average time it takes to gain ownership in scale in auto:</string>
    <string name="average_time_owning_opponent_switch_in_auto">Average time owning opponent switch in auto:</string>
    <string name="average_time_it_takes_to_gain_ownership_in_opponent_switch_in_auto">Average time it takes to gain ownership in opponent switch in auto:</string>
    <string name="average_time_owning_alliance_switch_in_auto">Average time owning alliance switch in auto:</string>
    <string name="average_time_it_takes_to_gain_ownership_in_alliance_switch_in_auto">Average time it takes to gain ownership in alliance switch in auto:</string>
    <string name="average_auto_cubes_in_scale">Average auto Cubes in scale:</string>
    <string name="average_auto_cubes_in_opposing_switch">Average auto Cubes in opposing switch:</string>
    <string name="average_auto_cubes_in_alliance_switch">Average auto Cubes in alliance switch:</string>
    <string name="picked_up_cube_in_auto_percentage">Picked up cube in auto %:</string>
    <string name="cross_autoline_percentage">Cross autoline %:</string>
    <string name="had_auto_percentage">Had auto %:</string>
    <string name="average_auto_score">Auto score:</string>
    <string name="average_total_score">Total:</string>
    <string name="average_defensive_score">Defensive:</string>
    <string name="average_offensive_score">Offensive:</string>
    <string name="no_show_percentage">No show %:</string>
    <string name="number_of_matches">Number of Matches:</string>
    <string name="average_auto_cubes_in_exchange">Average auto cubes in Exchange:</string>
    <string name="average_tele_cubes_in_exchange">Average tele cubes in exchange:</string>
    <string name="tele_weighted_score">Tele: </string>
    <string name="auto_weighted_score">Auto: </string>
    <string name="defensive_weighted_score">Defensive:</string>
    <string name="offensive_weighted_score">Offensive:</string>
    <string name="total_weighted_score">Total:</string>
    <string name="negative_weighted_score">Negative:</string>
    <string name="maximum_number_of_opposing_switch_ownership_changes_in_auto">Maximum Number Of Opposing Switch Ownership Changes In Auto:</string>
    <string name="minimum_number_of_opposing_switch_ownership_changes_in_auto">Minimum Number Of Opposing Switch Ownership Changes In Auto:</string>
    <string name="maximum_number_of_alliance_switch_ownership_changes_in_auto">Maximum Number Of Alliance Switch Ownership Changes In Auto:</string>
    <string name="minimum_number_of_alliance_switch_ownership_changes_in_auto">Minimum Number Of Alliance Switch Ownership Changes In Auto:</string>
    <string name="maximum_number_of_scale_ownership_changes_in_auto">Maximum Number Of Scale Ownership Changes In Auto:</string>
    <string name="minimum_number_of_scale_ownership_changes_in_auto">Minimum Number Of Scale Ownership Changes In Auto:</string>
    <string name="maximum_cubes_placed_in_opposing_switch_in_auto">Maximum Cubes Placed In Opposing Switch In Auto:</string>
    <string name="minimum_cubes_placed_in_opposing_switch_in_auto">Minimum Cubes Placed In Opposing Switch In Auto:</string>
    <string name="maximum_cubes_placed_in_alliance_switch_in_auto">Maximum Cubes Placed In Alliance Switch In Auto:</string>
    <string name="minimum_cubes_placed_in_alliance_switch_in_auto">Minimum Cubes Placed In Alliance Switch In Auto:</string>
    <string name="maximum_cubes_placed_in_scale_in_auto">Maximum Cubes Placed In Scale In Auto:</string>
    <string name="minimum_cubes_placed_in_scale_in_auto">Minimum Cubes Placed In Scale In Auto:</string>
    <string name="maximum_cubes_placed_in_exchange_in_auto">Maximum Cubes Placed In Exchange In Auto:</string>
    <string name="minimum_cubes_placed_in_exchange_in_auto">Minimum Cubes Placed In Exchange In Auto:</string>
    <string name="maximum_time_it_takes_to_gain_opposing_switch_ownership_in_auto">Maximum Time It Takes To Gain Opposing Switch Ownership In Auto:</string>
    <string name="minimum_time_it_takes_to_gain_opposing_switch_ownership_in_auto">Minimum Time It Takes To Gain Opposing Switch Ownership In Auto:</string>
    <string name="maximum_time_owning_opposing_switch_ownership_in_auto">Maximum Time Owning Opposing Switch Ownership In Auto:</string>
    <string name="minimum_time_owning_opposing_switch_ownership_in_auto">Minimum Time Owning Opposing Switch Ownership In Auto:</string>
    <string name="maximum_time_it_takes_to_gain_alliance_switch_ownership_in_auto">Maximum Time It Takes To Gain Alliance Switch Ownership In Auto:</string>
    <string name="minimum_time_it_takes_to_gain_alliance_switch_ownership_in_auto">Minimum Time It Takes To Gain Alliance Switch Ownership In Auto:</string>
    <string name="maximum_time_owning_alliance_switch_ownership_in_auto">Maximum Time Owning Alliance Switch Ownership In Auto:</string>
    <string name="minimum_time_owning_alliance_switch_ownership_in_auto">Minimum Time Owning Alliance Switch Ownership In Auto:</string>
    <string name="maximum_time_it_takes_to_gain_scale_ownership_in_auto">Maximum Time It Takes To Gain Scale Ownership In Auto:</string>
    <string name="minimum_time_it_takes_to_gain_scale_ownership_in_auto">Minimum Time It Takes To Gain Scale Ownership In Auto:</string>
    <string name="maximum_time_owning_scale_ownership_in_auto">Maximum Time Owning Scale Ownership In Auto:</string>
    <string name="minimum_time_owning_scale_ownership_in_auto">Minimum Time Owning Scale Ownership In Auto:</string>
    <string name="maximum_number_of_opposing_switch_ownership_changes_in_tele">Maximum Number Of Opposing Switch Ownership Changes In Tele:</string>
    <string name="minimum_number_of_opposing_switch_ownership_changes_in_tele">Minimum Number Of Opposing Switch Ownership Changes In Tele:</string>
    <string name="maximum_number_of_alliance_switch_ownership_changes_in_tele">Maximum Number Of Alliance Switch Ownership Changes In Tele:</string>
</resources>