<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
   tools:context="com.vandenrobotics.tyr2018.activities.PitDisplay">

    <Spinner
        android:id="@+id/pit_spinnerTeamNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/pit_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextView_autoType"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/pit_autoAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Blank_space"
        android:textColor="@color/Goldish"/>

    <TextView
        android:id="@+id/pit_SwSc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextView_switch_or_scale"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/pit_SwScAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Blank_space"
        android:textColor="@color/Goldish" />

    <TextView
        android:id="@+id/pit_averageSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextView_averageSpeed"
        android:textColor="@color/White"  />

    <TextView
        android:id="@+id/pit_averageSpeedAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Blank_space"
        android:textColor="@color/Goldish"  />

    <TextView
        android:id="@+id/pit_cycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextView_cycleAreas"
        android:textColor="@color/White"  />

    <TextView
        android:id="@+id/pit_cycleAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Blank_space"
        android:textColor="@color/Goldish" />


    <TextView
        android:id="@+id/pit_climb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextView_climb"
        android:textColor="@color/White"  />

    <TextView
        android:id="@+id/pit_climbAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Goldish"  />


    <TextView
        android:id="@+id/pit_floor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextView_floorPickup"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/pit_FloorAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Blank_space"
        android:textColor="@color/Goldish" />

    <TextView
       android:id="@+id/pit_driveTrain"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/TextView_driveTrain"
       android:textColor="@color/White"  />

    <TextView
       android:id="@+id/pit_driveTrainAns"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textColor="@color/Goldish"  />

    <TextView
       android:id="@+id/pit_intake"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/TextView_intakeShooterType"
       android:textColor="@color/White" />

    <TextView
       android:id="@+id/pit_intakeAns"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textColor="@color/Goldish"  />


    <TextView
        android:id="@+id/pit_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Programming Language:"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/pit_langAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Goldish"  />

    <TextView
        android:id="@+id/pit_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Comments:"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/pit_commentsAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Goldish"  />

</LinearLayout>
